--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 title: The Best Ways to Make Money Online
 email: 
 description: Gimmiemonies.com outlines the best way to make money online.  Whether you are looking for side income or a full time job, our aim to is to provide all the best ways to make money right on your computer.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "cartuhok.github.io/gimmiemonies/" # the subpath of your site, e.g. /blog
 url: "http://gimmiemonies.com/" # the base hostname & protocol for your site
 twitter_username: carter_rink
 github_username:  cartuhok
