--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The Best Ways to Make Money Online
+title: The Best Ways to Make and Save Money Online
 email: 
-description: Gimmiemonies.com outlines the best way to make money online.  Whether you are looking for side income or a full time job, our aim to is to provide all the best ways to make money right on your computer.
+description: The best and most trusted ways to make and save money online.   
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://gimmiemonies.com/" # the base hostname & protocol for your site
 twitter_username: carter_rink
